--- a/sources/VeloCity.Wpf.Presentation.Styles/Themes/CustomControls/IconButtonStyles.xaml
+++ b/sources/VeloCity.Wpf.Presentation.Styles/Themes/CustomControls/IconButtonStyles.xaml
@@ -51,11 +51,20 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                             <ContentPresenter
                                 x:Name="PART_Icon"
                                 Content="{TemplateBinding Icon}"
-                                Margin="0 0 8 0" />
+                                Margin="0 0 8 0"
+                                VerticalAlignment="Center"/>
 
                             <ContentPresenter
                                 Content="{TemplateBinding Content}"
-                                VerticalAlignment="Center" />
+                                VerticalAlignment="Center">
+
+                                <!--<ContentPresenter.Resources>
+                                    <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource {x:Type TextBlock}}">
+                                        <Setter Property="VerticalAlignment" Value="Center" />
+                                    </Style>
+                                </ContentPresenter.Resources>-->
+
+                            </ContentPresenter>
 
                         </StackPanel>
 
