--- a/sources/VeloCity.Wpf.Presentation.Styles/Themes/CustomControls/OkCancelWindowStyles.xaml
+++ b/sources/VeloCity.Wpf.Presentation.Styles/Themes/CustomControls/OkCancelWindowStyles.xaml
@@ -17,12 +17,15 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:customControls="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.CustomControls;assembly=DustInTheWind.VeloCity.Wpf.Presentation.CustomControls"
-    xmlns:behaviors="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.Styles.Behaviors">
+    xmlns:behaviors="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.Styles.Behaviors"
+    xmlns:converters="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.CustomControls.Converters;assembly=DustInTheWind.VeloCity.Wpf.Presentation.CustomControls">
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="Pack://application:,,,/DustInTheWind.VeloCity.Wpf.Presentation.Styles;component/Themes/Constants.xaml" />
         <ResourceDictionary Source="Pack://application:,,,/DustInTheWind.VeloCity.Wpf.Presentation.Styles;component/Themes/StandardControls/TextBlockStyles.xaml" />
     </ResourceDictionary.MergedDictionaries>
+
+    <converters:ResizeModeToGripVisibilityConverter x:Key="ResizeModeToGripVisibilityConverter" />
 
     <Style TargetType="{x:Type customControls:OkCancelWindow}">
         <Setter Property="Background" Value="{StaticResource PrimaryBrush}" />
@@ -80,29 +83,36 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                             DockPanel.Dock="Bottom"
                             Background="{StaticResource PrimaryDarkBrush}"
                             MinHeight="70"
-                            Padding="30 0"
                             BorderThickness="0 1 0 0"
                             BorderBrush="{StaticResource PrimaryLightBrush}">
 
-                            <StackPanel
-                                Orientation="Horizontal"
-                                FlowDirection="RightToLeft"
-                                VerticalAlignment="Center">
+                            <Grid>
+                                <StackPanel
+                                    Orientation="Horizontal"
+                                    FlowDirection="RightToLeft"
+                                    VerticalAlignment="Center"
+                                    Margin="30 0">
 
-                                <Button
-                                    Content="Cancel"
-                                    IsCancel="True"
-                                    MinWidth="100"
-                                    TabIndex="4" />
+                                    <Button
+                                        Content="Cancel"
+                                        IsCancel="True"
+                                        MinWidth="100"
+                                        TabIndex="4" />
 
-                                <Button
-                                    Content="Ok"
-                                    IsDefault="True"
-                                    MinWidth="100"
-                                    behaviors:WindowButtonBehavior.IsDefault="True"
-                                    TabIndex="3" />
+                                    <Button
+                                        Content="Ok"
+                                        IsDefault="True"
+                                        MinWidth="100"
+                                        behaviors:WindowButtonBehavior.IsDefault="True"
+                                        TabIndex="3" />
 
-                            </StackPanel>
+                                </StackPanel>
+
+                                <ResizeGrip
+                                    HorizontalAlignment="Right"
+                                    VerticalAlignment="Bottom"
+                                    Visibility="{Binding ResizeMode, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource ResizeModeToGripVisibilityConverter}}" />
+                            </Grid>
 
                         </Border>
 
