--- a/sources/VeloCity.Wpf.Presentation/Pages/CloseSprintConfirmation/CloseSprintConfirmationWindow.xaml
+++ b/sources/VeloCity.Wpf.Presentation/Pages/CloseSprintConfirmation/CloseSprintConfirmationWindow.xaml
@@ -30,6 +30,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     mc:Ignorable="d"
     Title="{Binding Title}"
     WindowStartupLocation="CenterOwner"
+    ResizeMode="CanResizeWithGrip"
     d:DataContext="{d:DesignInstance closeSprintConfirmation:CloseSprintConfirmationViewModel}">
 
     <Window.Resources>
